karl package Changelog
======================

3.98 (2012-09-26)
-----------------

- Fixed link to edit profiles in admin profile view.

- Switched global notification background and text color (LP #1050965)

- Indented profile info on ux2 (LP #1050067)

- improve chatter messages view and fix messages pulldown view link.

- Implement a slickgrid based solution for the Tabular view of the ux2 People
  grid.  This eliminates pagination on People Tabular reports. (LP #1046463)

- In the Files (slick) grid, in ux2 only, decrease the width of the Type
  (mimetype) field to smaller, just enough to accomodate the Type label in the
  column header.

- Fix alternating rows to match the rest of the site,
  in the Files and People grids (slickgrids) in ux2.

- Fix date format problems where on various locations, the US date format
  was incorrectly displayed even if the user had selected an EU date format.
  (LP #938063)

  *  start and end dates at show calendar event (ux1 + ux2) display only

  *  blog comments (ux1 + ux2) display only

  *  start_date, end_date fields of add/edit calendar events. This
     covers the support through both the form widget and the javascript
     (including the jquery-ui datepicker) stack

  *  Publication Date field of the Add News Item (ux1 + ux2)

- Fix date format (US / EU) in the date column of the wiki index. Both ux1
  and ux2. (LP #1051243)

3.97 (2012-09-14)
-----------------

- Integrate with the perfmetrics package to start sending performance metrics
  to statsd/graphite.

- Fixed problem where a link inside a button on feeds would not work on some
  browsers.

- Added a layout for intranets with left navigation.

- Add globalization for dates in calendar portlets.

- Add correct Office 2010 format mime types to multiupload.

- Corrected typo that prevent email icon from showing up in people directory.

- Fixed problem where javascript actions would not work in people directory.

- Add rss and email icoins to blog view.
